--- a/cod/Proyecto_Estadistica_G03.Rmd
+++ b/cod/Proyecto_Estadistica_G03.Rmd
@@ -27,6 +27,7 @@ df <- read_csv("heart_disease_health_indicators_BRFSS2015.csv")
 summary(df)
 
 ```
+
 ```{r}
 #Conteo nulos
 null_count <- colSums(is.na(df))
@@ -336,7 +337,7 @@ if (resultado$p.value < 0.05) {
 4. No hay suficiente evidencia para afirmar que la media del de los ingresos del las personas que sufren enfermedades del corazón es mayor que la media de las que no sufren enfermedades del corazón. Este resultado no permite establecer alguna relación entre enfermedades cardiacas y el ingreso de las personas.
 
 
-# Chi cuadrado
+# Chi cuadrado y  V de Cramer
 
 ## Importación de paquetes
 ```{r}
@@ -371,12 +372,17 @@ Según las notas del curso para estas pruebas la hipótesis nula es que las dos 
 
 
 ```{r}
+# Instalar el paquete confintr si no está instalado
+if (!require(confintr)) {
+  install.packages("confintr")
+  library(confintr)
+}
+
 df <- df %>% mutate(across(-HeartDiseaseorAttack, as.factor))
 
-# Obtener los nombres de las columnas del df
 variables <- colnames(df)[colnames(df) != "HeartDiseaseorAttack"]
 
-# Realizar pruebas chi-cuadrado de Pearson para cada variable
+# Realizar pruebas chi-cuadrado de Pearson para cada variable y calcular V de Cramer
 for (variable in variables) {
   tabla <- table(df[[variable]], df$HeartDiseaseorAttack)
   
@@ -390,6 +396,10 @@ for (variable in variables) {
   } else {
     cat("No rechazamos la hipótesis nula. No hay suficiente evidencia para afirmar que hay una relación estadisticamente significativa entre", variable, "y HeartDiseaseorAttack.\n\n")
   }
+  
+  # Calcular V de Cramer
+  cramer_v <- cramersv(tabla)
+  cat("El valor de V de Cramer para la variable", variable, "es:", cramer_v, "\n\n")
 }
 ```
 Depués de observar los P-Value resultantes, nos damos cuenta que a pesar de poseer un X-squared disitinto o tener distintos grados de libertad, todas poseen p-value<2.2e-16 por lo tanto rechazamos la hipotesis nula y por tanto hay dependencia, además los Warning: Chi-squared approximation may be incorrect, son completamente normales dado que son las variables no categóricas del data frame.
@@ -400,8 +410,10 @@ colnames(df)
 ```
 Daso que se pudo comprobar la independencia individual, se realizó una agrupación de variables para observar si estas al estar agrupadas también mantendrían dependencia 
 
-## Creación de columnas nuevas
+## Creación de columnas nuevas y repetir proceso
+
 ```{r}
+# Creación de columnas nuevas
 df <- df %>%
   mutate(High_Chol_BP = case_when(
     HighChol == 0 & HighBP == 0 ~ 0,
@@ -410,9 +422,6 @@ df <- df %>%
     HighChol == 0 & HighBP == 1 ~ 3
   ))
 
-```
-
-```{r}
 df <- df %>%
   mutate(Stroke_DiffWalk = case_when(
     Stroke == 0 & DiffWalk == 0 ~ 0,
@@ -421,66 +430,31 @@ df <- df %>%
     Stroke == 0 & DiffWalk == 1 ~ 3
   ))
 
-```
-
-## Repetir el proceso para agrupaciones
-```{r}
-
-Data_HeartDisease_CholBP <- table(df$HeartDiseaseorAttack,df$High_Chol_BP )
-
+# Repetir el proceso para agrupaciones
+Data_HeartDisease_CholBP <- table(df$HeartDiseaseorAttack, df$High_Chol_BP)
 resultado_CholBP <- chisq.test(x = Data_HeartDisease_CholBP)
-  
-  cat("Resultados para la variable:", "High_Chol_BP", "\n")
-  print(resultado)
-  
-  if (resultado$p.value < 0.05) {
-    cat("Rechazamos la hipótesis nula. Hay una relación estadisticamente significativa entre", "High_Chol_BP", "y HeartDiseaseorAttack.\n\n")
-  } else {
-    cat("No rechazamos la hipótesis nula. No hay suficiente evidencia para afirmar que hay una relación estadisticamente significativa entre", "High_Chol_BP", "y HeartDiseaseorAttack.\n\n")
-  }
-
-```
-
-```{r}
-Data_HeartDisease_Stroke_DiffWalk <- table(df$HeartDiseaseorAttack,df$Stroke_DiffWalk )
-
-
-resultadoStrokeDiff <- chisq.test(x = Data_HeartDisease_Stroke_DiffWalk)
-  
-  cat("Resultados para la variable:","Stroke_DiffWalk", "\n")
-  print(resultado)
-  
-  if (resultado$p.value < 0.05) {
-    cat("Rechazamos la hipótesis nula. Hay una relación estadisticamente significativa entre", "Stroke_DiffWalk", "y HeartDiseaseorAttack.\n\n")
-  } else {
-    cat("No rechazamos la hipótesis nula. No hay suficiente evidencia para afirmar que hay una relación estadisticamente significativa entre", "Stroke_DiffWalk", "y HeartDiseaseorAttack.\n\n")
-  }
-
-```
-
-```{r}
-convert_to_numeric <- function(x) {
-  if (is.factor(x)) {
-    return(as.numeric(as.character(x)))
- } else {
-    return(as.numeric(x))
-  }
+cat("Resultados para la variable:", "High_Chol_BP", "\n")
+print(resultado_CholBP)
+if (resultado_CholBP$p.value < 0.05) {
+  cat("Rechazamos la hipótesis nula. Hay una relación estadisticamente significativa entre", "High_Chol_BP", "y HeartDiseaseorAttack.\n\n")
+} else {
+  cat("No rechazamos la hipótesis nula. No hay suficiente evidencia para afirmar que hay una relación estadisticamente significativa entre", "High_Chol_BP", "y HeartDiseaseorAttack.\n\n")
 }
+cramer_v_CholBP <- cramersv(Data_HeartDisease_CholBP)
+cat("El valor de V de Cramer para la variable", "High_Chol_BP", "es:", cramer_v_CholBP, "\n\n")
 
-# Aplicar la función a todas las columnas del data frame
-df <- as.data.frame(lapply(df, convert_to_numeric))
+Data_HeartDisease_Stroke_DiffWalk <- table(df$HeartDiseaseorAttack, df$Stroke_DiffWalk)
+resultadoStrokeDiff <- chisq.test(x = Data_HeartDisease_Stroke_DiffWalk)
+cat("Resultados para la variable:", "Stroke_DiffWalk", "\n")
+print(resultadoStrokeDiff)
+if (resultadoStrokeDiff$p.value < 0.05) {
+  cat("Rechazamos la hipótesis nula. Hay una relación estadisticamente significativa entre", "Stroke_DiffWalk", "y HeartDiseaseorAttack.\n\n")
+} else {
+  cat("No rechazamos la hipótesis nula. No hay suficiente evidencia para afirmar que hay una relación estadisticamente significativa entre", "Stroke_DiffWalk", "y HeartDiseaseorAttack.\n\n")
+}
+cramer_v_StrokeDiff <- cramersv(Data_HeartDisease_Stroke_DiffWalk)
+cat("El valor de V de Cramer para la variable", "Stroke_DiffWalk", "es:", cramer_v_StrokeDiff, "\n\n")
 ```
-
-
-```{r}
-
-correlation_matrix <- cor(df)
-corrplot(correlation_matrix, method = 'color', order = 'FPC', type = 'lower', diag = FALSE,
-         tl.cex = 0.8, # Tamaño de las etiquetas de texto
-         cl.cex = 0.8, # Tamaño de la leyenda de colores
-         number.cex = 0.7) # Tamaño de los números de correlación
-```
-
 Una vez más realizamos las correlaciones para observar si con las dos nuevas columnas tiene una relación más fuerte como lo es la lineal o solo existe dependencia pero no lineal entre ellas y esto ultimo fue lo concluido.
 
 
